Fixed back button not showing up, completed Ticket Functionality

--- a/style_chosen_ticket.css
+++ b/style_chosen_ticket.css
@@ -3,9 +3,9 @@
     
     position: absolute;
     
-    left: 20%;
+    left: 25%;
     top: 0;
-    bottom: 80%;
+    bottom: 75%;
     
     margin: auto;
 }
