--- a/style_ticket_confirmation.css
+++ b/style_ticket_confirmation.css
@@ -10,9 +10,9 @@
     
     position: absolute;
     
-    left: 20%;
+    left: 25%;
     top: 0;
-    bottom: 80%;
+    bottom: 75%;
     
     margin: auto;
 }
