--- a/style_ticket_on_load.css
+++ b/style_ticket_on_load.css
@@ -1,3 +1,15 @@
+#return_button {
+    height: 2%;
+    
+    position: absolute;
+    
+    left: 25%;
+    top: 0;
+    bottom: 75%;
+    
+    margin: auto;
+}
+
 .main_menu {
     box-sizing: border-box;
     
